k8s/base/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gamecloud-main
spec:
  selector:
    matchLabels:
      app: gamecloud-main
      app.kubernetes.io/part-of: gamecloud
      app.kubernetes.io/managed-by: kustomize
  template:
    metadata:
      labels:
        app: gamecloud-main
        app.kubernetes.io/part-of: gamecloud
        app.kubernetes.io/managed-by: kustomize
    spec:
      containers:
        - name: gamecloud-main
          image: cr.yandex/crpl3p256m938dtgp3lh/gamecloud-main:latest
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
