k8s/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gamecloud-main
  labels:
    app: gamecloud-main
  annotations:
    cloud.yandex.com/load-balancer-type: "internal"
    cloud.yandex.com/monitored: "true"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 5005
      targetPort: 5005
      protocol: TCP
      name: grpc
  selector:
    app: gamecloud-main
